class Unidad:
    def __init__(self, patente: str):
        self._patente = patente